--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
       <h2>趣味</h2>
       <div>
-        御堂筋に走っている車を見に行くこと
+        御堂筋に走っている高級車を見に行くこと
       </div>
     </div>
   </div>
