--- a/rep03.html
+++ b/rep03.html
@@ -72,7 +72,7 @@
   </div>
                                                              
   <div class=footer>
-    作成日：2023年MM月DD日
+    作成日：2023年6月14日
   </div>
 </body>
 </html>
