--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>せつめいはまだない。</div>
+    <div>大阪公立大高専<br>3a班17番白川息吹</br></div>
   </div>
   <div class=main>
     <div>
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class=footer>
-    2023/01/18
+    2023/5/24
   </div>
 </body>
 </html>
