--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>大阪公立大高専<br>3a班17番 白川息吹</br></div>
+    <div>大阪公立大学工業高等専門学校<br>3a班17番 白川息吹</br></div>
   </div>
   <div class=main>
     <div>
