--- a/rep01.html
+++ b/rep01.html
@@ -31,7 +31,7 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを作成した。<br>
+        スクラッチを使って線を書くプログラムを作成した。まず、フラッグが押されるとペンがすべて消え、ネコが座標(0,0)に移動し、90度に向くようにした。そうすることで、前に描かれたペンをすべて消し、ネコが中心に行くようになる。その後、ペンを下ろし、直線を引いていくごとにネコを10度ずつ傾けることで、円のような図形を描いた。直線を引くプログラムは30回繰り返されるようにすることで、ネコがちょうど一周回るようにした。また、ペンの太さは8にし、色は100ずつ変えるようにした。<br>
         2.感想<br>
         感想を自分で書く。<br>
       </div>
