--- a/rep01.html
+++ b/rep01.html
@@ -54,7 +54,7 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://komezirushi.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        GitHubを使って自分のホームページを作成した。プログラムの中に書き込んでいくことで、クラブや趣味などをホームページに掲載した。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>      
