--- a/rep01.html
+++ b/rep01.html
@@ -44,7 +44,7 @@
         1.内容<br>
         スクラッチを使ってネコが落ちてくるボールを拾うゲームを作成した。プログラムをネコとボールのそれぞれの場合に分けた。まず、フラッグが押されると表示されているスコアが0になり、ネコは座標(-120,-90)に移動する。また、50％の大きさのボールが上から1から4秒かけて落ちてくるようにした。ボールの出てくるx座標の位置を‐200から200の間の乱数にしたことで落ちてくる位置をランダムにした。そして、ネコがボールに触れたらスコアを10ずつ入れていくようにし、メッセージ1を送るようにプログラムした。このメッセージ1が送られるとボールが消えるようになっている。ネコの回転方法を左右のみにすることでネコが左右以外を向くことを防いだ。右矢印キーが押されるとネコは右に向いて鳴きながら歩いていき、左矢印キーが押されるとネコは左に向いて鳴きながら歩いていく。動くときに10歩ずつネコのコスチュームを変えていくことで実際に歩いているように見えるようにした。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ゲームの仕組みをあまり深く考えたことはなかったが、このプログラムを作成して少し仕組みを知ることができた。このゲームは簡単なプログラムで作ることができたが、このプログラムを活かしてもう少し難しいゲームも作ることができると思うので、挑戦したいと思った。<br>        
       </div>
     </div>
 
