--- a/rep01.html
+++ b/rep01.html
@@ -33,7 +33,7 @@
         1.内容<br>
         スクラッチを使って線を書くプログラムを作成した。まず、フラッグが押されるとペンがすべて消え、ネコが座標(0,0)に移動し、90度に向くようにした。そうすることで、前に描かれたペンをすべて消し、ネコが中心に行くようになる。その後、ペンを下ろし、直線を引いていくごとにネコを10度ずつ傾けることで、円のような図形を描いた。直線を引くプログラムは30回繰り返されるようにすることで、ネコがちょうど一周回るようにした。また、ペンの太さは8にし、色は100ずつ変えるようにした。<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        スクラッチでゲーム以外を作ったのは初めてだったので、プログラミングはゲーム以外の役にも立っているということを感じさせられ、改めてプログラミングの大切さを知ることができた。社会に役立つエンジニアになるためにもプログラミングを学んでいこうと思う。また、プログラミングでは座標などの数学の知識も使うため他の教科も学んでいく必要があると思った。<br>
       </div>
     </div>
 
