--- a/rep01.html
+++ b/rep01.html
@@ -54,7 +54,7 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://komezirushi.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
-        GitHubを使って自分のホームページを作成した。プログラムの中に書き込んでいくことで、クラブや趣味などをホームページに掲載した。<br>
+        htmlで自分のホームページを作成し、GitHubにアップロードした。プログラムの中に書き込んでいくことで、クラブや趣味などをホームページに掲載した。<br>
         2.感想<br>
         ホームページを作成するのは初めてだったが、今回はプログラムに書き込んでいくだけでよかったのでしっかりと作ることができた。また、このホームページの作成を通して、ホームページを作るときにもプログラミングが必要であるということを知った。ホームページを作る能力は、将来、起業するときにも役立つと思うので、自らどんどん学んでいこうと思った。<br>        
       </div>      
