--- a/rep02.html
+++ b/rep02.html
@@ -31,7 +31,7 @@
       <a href="https://komezirushi.github.io/web2023/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        1週目のレポートをHTMLで作成した。<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
