--- a/rep02.html
+++ b/rep02.html
@@ -31,9 +31,9 @@
       <a href="https://komezirushi.github.io/web2023/rep01.html">１週目のレポート</a><br>
       <div>
         1.内容<br>
-        1週目のレポートをHTMLで作成した。<br>
+        1週目のレポートをHTMLで作成した。1週目に体験したスクラッチとホームページについてまとめた。スクリーンショットをアップロードすることでレポート上に表示されるようにした。また、プログラミングを書き換えて「私のホームページ」に飛んでいけるようにした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        HTMLを使ったのは初めてだったので、レポートを作成するのは少し難しかった。しかし、だんだんと慣れてきたので、これからのレポートも同じように作っていきたいと思う。レポートでスクラッチの説明をすることで自分自身がよりプログラムを理解することができた。<br>
       </div>
     </div>
 
