--- a/rep02.html
+++ b/rep02.html
@@ -42,7 +42,7 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        TeachableMachineを使いAIの機械学習を体験した。自分が出した手は「グー」「チョキ」「パー」のいずれかの手かを判別するようにした。判別できるようにするため、それぞれの手の写真をいろいろな角度から撮り、学習させた。その後、トレーニングさせることで、自分が出した手がどの手であるかの確立が表示されるようになった。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
