--- a/rep02.html
+++ b/rep02.html
@@ -44,7 +44,7 @@
         1.内容<br>
         TeachableMachineを使いAIの機械学習を体験した。自分が出した手は「グー」「チョキ」「パー」のいずれかの手かを判別するようにした。判別できるようにするため、それぞれの手の写真をいろいろな角度から撮り、学習させた。その後、トレーニングさせることで、自分が出した手がどの手であるかの確率が表示されるようになった。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        私は普段はAIを使う側だが、この体験でAIを学習させる側になったことにより、よりAIに関心を持つようになった。写真を撮って学習させるだけでほとんどが正しく判別されることにとてもおどろいた。AIはこれからもどんどん改良され普及していくと思うので、将来、このAI技術を応用させて使うことのできるエンジニアになりたいと思う。<br>        
       </div>
     </div>
     
