--- a/rep02.html
+++ b/rep02.html
@@ -53,7 +53,7 @@
       <img src="wroom.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        Workroomsというアプリケーションを使い、仮想空間を体験した。<br>
+        Workroomsというアプリケーションを使い、仮想空間を体験した。VRゴーグルをつけることにより、実際にその場にいるような体験をすることができる。 Workroomsの自分のオフィスでデスクホワイトボードを使ったり、会議室でクラスメートとホワイトボードを使ってコミュニケーションをとったりした。また、PCにミラーリングすることで、ペアの人もPCを通して仮想空間を体験することができるようにした。<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
