--- a/rep02.html
+++ b/rep02.html
@@ -55,7 +55,7 @@
         1.内容<br>
         Workroomsというアプリケーションを使い、仮想空間を体験した。VRゴーグルをつけることにより、実際にその場にいるような体験をすることができる。 Workroomsの自分のオフィスでデスクホワイトボードを使ったり、会議室でクラスメートとホワイトボードを使ってコミュニケーションをとったりした。また、PCにミラーリングすることで、ペアの人もPCを通して仮想空間を体験することができるようにした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        仮想空間を体験するのは初めてだったのでとても楽しんで取り組むことができた。Workroomsの会議室ではクラスメートと一緒にホワイトボードを書いたりすることができるため、広い教室の中にいる仲間たちとより近くでコミュニケーションをとることができているように感じた。また、VRゴーグルをつけることで、実際にその場にいるような感覚を味わえたのもとてもすごいと思った。<br>
       </div>
     </div>
     
