--- a/rep03.html
+++ b/rep03.html
@@ -31,7 +31,7 @@
       <a href="https://komezirushi.github.io/web2023/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Webプログラミング道場で仮想空間を作成した。A-Frameのサイトからテンプレートをコピーしてきて、Webプログラミング道場に貼り付けることで3次元モデルを作成した。また、それを書き換えることでオリジナルのモデルを作った。<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
