--- a/rep03.html
+++ b/rep03.html
@@ -33,7 +33,7 @@
         1.内容<br>
         Webプログラミング道場で仮想空間を作成した。A-Frameのサイトからテンプレートをコピーしてきて、Webプログラミング道場に貼り付けることで3次元モデルを作成した。また、それを書き換えることでオリジナルのモデルを作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        この体験を通してJavaScriptについて少し理解することができた。プログラミング言語を覚えるのはとても難しそうだと思うが、覚えることで色々なプログラムを作ることができるので少し勉強してみようと思った。<br>
       </div>
     </div>
     <div>
