--- a/rep03.html
+++ b/rep03.html
@@ -42,7 +42,7 @@
       <a href="https://komezirushi.github.io/web2023/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Webプログラミング道場で伝言板を作成した。伝言がセットされるとその伝言が表示されるようにプログラムした。また、伝言がセットされていないときには「伝言はまだありません」と表示されるようにプログラムした。<br>
         2.感想<br>
         かんそうかんそう<br>
       </div>
