--- a/rep03.html
+++ b/rep03.html
@@ -44,7 +44,7 @@
         1.内容<br>
         Webプログラミング道場で伝言板を作成した。伝言がセットされるとその伝言が表示されるようにプログラムした。また、伝言がセットされていないときには「伝言はまだありません」と表示されるようにプログラムした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        この体験では自分でプログラミング言語を入力していくため、1つ1つのプログラミング言語の意味を知ることができた。このプログラミングは企業のホームページなどでよく見るものなのでとても社会で活躍しているものだと思う。そのため、自分が起業するときのためにもしっかりと覚えておきたいと思う。<br>
       </div>
     </div>
 
