--- a/rep03.html
+++ b/rep03.html
@@ -52,9 +52,9 @@
       <h3>3-3 JavaScriptプログラムの３次元空間の体験</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルをつけて仮想空間に入り、球を飛ばしたり、空間内にある立体を自由に動かしたりした。また、空間内で移動した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        VRゴーグルをつけることでその場にいるような感覚になり、実際に球に当たっているように感じた。球の跳ね返り方がリアルなので驚いた。また、立体にも球が跳ね返るのはすごいと思った。<br>
       </div>
     </div>
   
